2005-07-29  Arunprakash <arunp@novell.com>

	* camel/camel-exchange-store.c (exchange_get_folder_info) : Fixed the
	construction of namespace for building the folder hierarchy. Fixes the
	bug #310711.
	(stub_notification) : Changed the events to be emitted to update the
	folder changes. Fixes #311866.
	* mail/mail-stub-exchange.c (subscribe_folder) : Added check for non-
	public hierarchy's folders.
	(unsubscribe_folder) : Added check for non-favorite hierarchy's folders.
	
2005-07-28  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange.c 
	(e_cal_backend_exchange_compute_changes_foreach_key) : Fix the callback 
	prototype. Fixes #273975. 
	Patch submitted by prothonotar@tarnation.dyndns.org

2005-07-25  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Bumped the version to 2.3.6
	* NEWS : Updated the file.
	* addressbook/e-book-backend-exchange.c :
	* camel/camel-exchange-folder.c :
	* camel/camel-exchange-store.c :
	* mail/mail-stub-exchange.c :
	* mail/mail-stub.c :
	* storage/exchange-component.c : 
	* storage/exchange-config-listener.c : Removed some unwanted dead code
	and also fixed some warnings for all files.

2005-07-25  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/exchange-component.c (impl_createControls) : Reimplemented.
	But we return NULL bonobo interfaces for now, since we dont need a 
	separate Exchange component anymore.
	* storage/GNOME_Evolution_Exchange_Storage.server.in.in : Use the 
	Evolution/Component bonobo interface for exchange process.

2005-07-25  Arunprakash <arunp@novell.com>

	* camel/camel-exchange-folder.c (refresh_info) : Changed to
	replay the journal and send refresh command only when in 
	online mode.
	(transfer_messages_to) : Changed to make use of the "transfer"
	journal entry instead of "append" journal entry.
	* camel/camel-exchange-journal.c (exchange_entry_free)
	(exchange_entry_load) (exchange_entry_write)
	(exchange_entry_play) : Updated for