@@ -19,9 +19,6 @@ information in this file about how server-side rules work is wrong.
 #E2kRule, #E2kRestriction
 </para>
 
-<!-- ##### SECTION Stability_Level ##### -->
-
-
 <!-- ##### STRUCT E2kAction ##### -->
 <para>
 A single server-side rule action.
