@@ -16,9 +16,6 @@ currently also used by mail-stub-exchange.c.)
 #E2kContext
 </para>
 
-<!-- ##### SECTION Stability_Level ##### -->
-
-
 <!-- ##### FUNCTION e2k_soup_message_new ##### -->
 <para>
 
