@@ -19,9 +19,6 @@ The <link linkend="ximian-connector-E2kContextPrivate">private
 E2kContext API</link>.
 </para>
 
-<!-- ##### SECTION Stability_Level ##### -->
-
-
 <!-- ##### STRUCT E2kContext ##### -->
 <para>
 #E2kContext manages the pool of WebDAV connections to the Exchange server.
