@@ -14,9 +14,6 @@ Data-encoding utility functions
 
 </para>
 
-<!-- ##### SECTION Stability_Level ##### -->
-
-
 <!-- ##### FUNCTION e2k_base64_encode ##### -->
 <para>
 
