@@ -31,9 +31,6 @@ Exchange server their mail is on, or what their SID is.</para></listitem>
 #E2kSid
 </para>
 
-<!-- ##### SECTION Stability_Level ##### -->
-
-
 <!-- ##### STRUCT E2kGlobalCatalog ##### -->
 <para>
 #E2kGlobalCatalog manages connections to the Global Catalog server.
@@ -124,15 +121,7 @@ regardless of what fields are queried for. Other fields will only be
 filled in based on the @flags passed to the lookup function.
 </para>
 
-@dn: 
-@display_name: 
 @sid: The SID (Windows Security Identifier) of the user.
-@email: 
-@exchange_server: 
-@mailbox: 
-@legacy_exchange_dn: 
-@delegates: 
-@delegators: 
 @quota_warn: the mailbox size (in kilobytes) at which the user should
 be warned about quota usage
 @quota_nosend: the mailbox size (in kilobytes) at which the user will
