@@ -14,9 +14,6 @@ HTTP utility functions
 
 </para>
 
-<!-- ##### SECTION Stability_Level ##### -->
-
-
 <!-- ##### TYPEDEF E2kHTTPStatus ##### -->
 <para>
 This represents a libsoup or HTTP status code
