@@ -14,9 +14,6 @@ Kerberos utilities
 
 </para>
 
-<!-- ##### SECTION Stability_Level ##### -->
-
-
 <!-- ##### ENUM E2kKerberosResult ##### -->
 <para>
 The result from e2k_kerberos_change_password() or
