@@ -15,9 +15,6 @@ These are the #E2kOperation methods used internally by #E2kContext and
 #E2kOperation, #E2kContext, #E2kGlobalCatalog
 </para>
 
-<!-- ##### SECTION Stability_Level ##### -->
-
-
 <!-- ##### USER_FUNCTION E2kOperationCancelFunc ##### -->
 <para>
 Passed to e2k_operation_start(). This will be called if an
