@@ -16,9 +16,6 @@ cancellable steps).
 #E2kContext, #E2kGlobalCatalog
 </para>
 
-<!-- ##### SECTION Stability_Level ##### -->
-
-
 <!-- ##### STRUCT E2kOperation ##### -->
 <para>
 An opaque structure representing the operation
