@@ -14,9 +14,6 @@ Search criteria
 
 </para>
 
-<!-- ##### SECTION Stability_Level ##### -->
-
-
 <!-- ##### STRUCT E2kRestriction ##### -->
 <para>
 This represents a MAPI <structname>SRestriction</structname> structure.
