@@ -35,9 +35,6 @@ parent in order to be able to access the object.
 #E2kSid
 </para>
 
-<!-- ##### SECTION Stability_Level ##### -->
-
-
 <!-- ##### STRUCT E2kSecurityDescriptor ##### -->
 <para>
 This represents a Windows <structname>SECURITY_DESCRIPTOR</structname>
