@@ -14,9 +14,6 @@ URI utility routines
 
 </para>
 
-<!-- ##### SECTION Stability_Level ##### -->
-
-
 <!-- ##### STRUCT E2kUri ##### -->
 <para>
 A URI.
