@@ -15,9 +15,6 @@ addressbook's "selectnames" interface.
 
 </para>
 
-<!-- ##### SECTION Stability_Level ##### -->
-
-
 <!-- ##### STRUCT E2kUserDialog ##### -->
 <para>
 The dialog widget.
