@@ -14,9 +14,6 @@ Random utility functions
 
 </para>
 
-<!-- ##### SECTION Stability_Level ##### -->
-
-
 <!-- ##### FUNCTION e2k_parse_timestamp ##### -->
 <para>
 
