@@ -14,9 +14,6 @@ XML utility functions
 
 </para>
 
-<!-- ##### SECTION Stability_Level ##### -->
-
-
 <!-- ##### FUNCTION e2k_parse_xml ##### -->
 <para>
 
