@@ -14,9 +14,6 @@ MAPI and CDO constants
 
 </para>
 
-<!-- ##### SECTION Stability_Level ##### -->
-
-
 <!-- ##### ENUM MapiAccess ##### -->
 <para>
 These are the bits in a folder's %PR_ACCESS property.
