@@ -14,9 +14,6 @@ Utility routines for libexchange test programs
 
 </para>
 
-<!-- ##### SECTION Stability_Level ##### -->
-
-
 <!-- ##### FUNCTION test_main ##### -->
 <para>
 
