@@ -2,3 +2,31 @@
 
 
 
+<!-- ##### TYPEDEF E2kProperties ##### -->
+<para>
+An #E2kProperties structure represents a set of WebDAV properties;
+either properties that are currently on an object, or a set of
+properties the caller wishes to add to / modify on / delete from an
+object.
+</para>
+
+
+<!-- ##### TYPEDEF E2kResultIter ##### -->
+<para>
+An opaque structure used to iterate through the results of a
+Multi-Status WebDAV method.
+</para>
+
+
+<!-- ##### SECTION Stability_Level ##### -->
+
+
+
+<!-- ##### TYPEDEF XNTLM_DES_KS ##### -->
+<para>
+This represents a DES key schedule. After initializing it with
+xntlm_deskey(), you can then pass it to xntlm_des() as many time as
+you need.
+</para>
+
+
