@@ -15,17 +15,6 @@ primarly for xntlm-internal use, but can also be used by other code.
 
 </para>
 
-<!-- ##### SECTION Stability_Level ##### -->
-
-
-<!-- ##### TYPEDEF XNTLM_DES_KS ##### -->
-<para>
-This represents a DES key schedule. After initializing it with
-xntlm_deskey(), you can then pass it to xntlm_des() as many time as
-you need.
-</para>
-
-
 <!-- ##### FUNCTION xntlm_deskey ##### -->
 <para>
 Sets up @ks based on @key. You must call this to initialize the key
