@@ -14,9 +14,6 @@ This is here for use by xntlm, but can also be used by other code.
 
 </para>
 
-<!-- ##### SECTION Stability_Level ##### -->
-
-
 <!-- ##### FUNCTION xntlm_md4sum ##### -->
 <para>
 
