@@ -14,9 +14,6 @@ These functions are the main interface to the xntlm library.
 
 </para>
 
-<!-- ##### SECTION Stability_Level ##### -->
-
-
 <!-- ##### FUNCTION xntlm_negotiate ##### -->
 <para>
 
